# blog

./: .gitignore  Dockerfile  GEMINI.md  README.md  build.sh  config.py  database.db  db.sqlite3  main.py  package-lock.json  package.json  pyproject.toml  settings.py  whiz.yaml
app/: __init__.py  middleware.py  models.py  repositories.py  serializers.py  services.py  views.py
authentication/: models.py  repositories.py  routers.py  serializers.py  services.py  views.py
blog/: models.py  repositories.py  routers.py  serializers.py  services.py  settings.py  urls.py  views.py
core/: admin.py  app_data.py  forms.py  middleware.py  models.py  repositories.py  routers.py  serializers.py  services.py  urls.py  utils.py  views.py
core/migrations/: 0001_initial.py  0002_contact.py  0003_contact_date.py
static/css/: input.css  style.css
static/js/: script.js
templates/: about.html  about.html.j2  article.html  article.html.j2  article_form.html  article_form.html.j2  contact.html  index.html  index.html.j2  layout.html  layout.html.j2  login.html  login.html.j2  message.html.j2  nav.html  nav.html.j2  navbar.html  not_found.html.j2  post.html
templates/components/: alert.html.j2  article_card.html.j2  articles.html.j2  footer.html  head.html  header.html  nav.html.j2  nav_bar.html
