[project]
name = "blog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.3"
dependencies = [
    "oxapy==0.7.7",
    "pyproject-toml>=0.1.0",
    "python-dotenv>=1.1.0",
    "sqlalchemy-libsql @ git+https://github.com/j03-dev/sqlalchemy-libsql@fix/segmentation_fault_13",
]

[tool.setuptools]
packages = ["core", "app"]
